--- a/test/Views/Identity/Categories.cshtml
+++ b/test/Views/Identity/Categories.cshtml
@@ -2,7 +2,7 @@
 
 <div class="container">
 <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2" style="margin-top:40px;">
         <div class="list-group">
 
                 <a class="list-group-item list-group-item-action list-group-item-light p-1" href="@Url.Action("Categories", "Identity")"> კატეგორიები</a>
@@ -13,16 +13,16 @@
     </div>
     <div class="col-md-10">
         <form asp-action="CreateCategory" asp-controller="Identity" method="post">
-            <div class="row">
-            <div class="col">
-                <input type="text" asp-for="GeorgianTitle" class="form-control" placeholder="კატეგორია ქართულად">
-            </div>
-            <div class="col">
-                <input type="text" asp-for="UkrainianTitle" class="form-control" placeholder="კატეგორია უკრაინულად">
-            </div>
-            <div class="col">
-                <button type="submit" class="btn btn-success"> დამატება</button>
-            </div>
+            <div class="row" style="margin-top:50px;">
+                <div class="col">
+                    <input type="text" asp-for="GeorgianTitle" class="form-control" placeholder="კატეგორია ქართულად">
+                </div>
+                <div class="col">
+                    <input type="text" asp-for="UkrainianTitle" class="form-control" placeholder="კატეგორია უკრაინულად">
+                </div>
+                <div class="col">
+                    <button type="submit" class="btn btn-success"> დამატება</button>
+                </div>
             </div>
         </form>
     </div>
