--- a/test/Views/Identity/Login.cshtml
+++ b/test/Views/Identity/Login.cshtml
@@ -55,8 +55,10 @@
 
 
 <script>
-     $(document).ready(function () {
-         $('header').empty();
-         $('footer').empty();
-     });
+     
+     window.onload = function() {
+      $("#xederblyat").attr("hidden", "hidden");
+    };
+    
+    
  </script>
