--- a/test/Views/Identity/Posts.cshtml
+++ b/test/Views/Identity/Posts.cshtml
@@ -56,7 +56,7 @@
                                 <span asp-validation-for="Image" class="text-danger"></span>
                             </div>
                             <div style="padding-top:20px;padding-bottom:20px;">
-                                  <input type="checkbox" id="show_on_home"  name="show_on_home" value="show_on_home">
+                                  <input type="checkbox" asp-for="ShowOnMainMenu" id="show_on_home"  name="show_on_home" value="show_on_home">
                                     <label for="show_on_home"> show on home page</label><br>
                             </div>
                             <div class="form-group">
