--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 
                     @foreach (var category in Model.Categories)
                     {
-                        <a class="list-group-item list-group-item-action list-group-item-light p-1" href="#!">@*@localizer["Category"]*@ @category.CategoryGeorgianName</a>
+                        <a class="list-group-item list-group-item-action list-group-item-light p-1" href="@Url.Action("Index", "Home",new  { Category = @category.Id})">@*@localizer["Category"]*@ @category.CategoryGeorgianName</a>
                     }
                 </div>
             </div>
@@ -23,7 +23,6 @@
                     <div class="col-sm col-xs-12">
                         @for (int i = 0; i < Model.Posts.Count; i++)
                         {
-
                             @if (i % 3 == 0)
                             {
                                 <div class="card" style="margin-top:10px;">
@@ -37,14 +36,12 @@
                                     </div>
                                 </div>
                             }
-
                         }
                     </div>
 
                     <div class="col-sm col-xs-12">
                         @for (int i = 0; i < Model.Posts.Count; i++)
                         {
-
                             @if (i % 3 == 1)
                             {
                                 <div class="card" style="margin-top:10px;">
