--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -2,253 +2,75 @@
 
 @inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
 
+<style>
+    .textFont {
+        font-family: Roboto;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 25px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: black;
+    }
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-3">
-            <div class="" id="sidebar-wrapper" style="margin-top:10px;">
-                <div class="sidebar-heading border">კატეგორიები</div>
-                <div class="list-group">
+    .textFontBold {
+        font-family: Roboto;
+        font-size: 21px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 25px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: white;
+    }
+</style>
 
-                    @foreach (var category in Model.Categories)
-                    {
-                        <a class="list-group-item list-group-item-action list-group-item-light p-1" href="@Url.Action("Index", "Home",new  { Category = @category.Id})">@*@localizer["Category"]*@ @category.CategoryGeorgianName</a>
-                    }
-                </div>
-            </div>
+<div class="row" style="height:100vh;">
+
+    <div class="col-md-3" style="background: #F8BF0C">
+        <div class="row" style="height: 40px; background: #E6AE00">
+            <p class="textFontBold" style="margin-left:30px">test</p>
         </div>
-        <div class="col-md-9">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm col-xs-12">
-                        @for (int i = 0; i < Model.Posts.Count; i++)
-                        {
-                            @if (i % 3 == 0)
-                            {
-                                <div class="card" style="margin-top:10px;">
-                                    <img class="card-img-top" src="data:image/png;base64,@Model.Posts[i].ThumbnailBase64" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">@Model.Posts[i].GeorgianTitle</h5>
-                                        <p class="card-text">@Model.Posts[i].GeorgianDescription</p>
-                                    </div>
-                                    <div class="card-footer">
-                                        <a href="@Model.Posts[i].RedirectUrl">ვრცლად ნახვა</a>
-                                    </div>
-                                </div>
-                            }
-                        }
+        @foreach (var category in Model.Categories)
+        {
+            <div class="row" style="height: 40px;">
+                <p class="textFontBold" style="margin-left:30px">@category.CategoryGeorgianName</p>
+            </div>
+        }
+    </div>
+
+    <div class="col-md-9 bg-light" style="background: url('/content/image/background.svg') no-repeat bottom;">
+        <div class="container" style="margin-top:30px">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="card mb-3">
+                        <img class="card-img-top" src="https://static.euronews.com/articles/stories/06/43/76/76/1440x810_cmsv2_8b9c9503-4d71-5a47-b199-fd6e1185ff06-6437676.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text"><small class="text-muted">2022-03-26</small></p>
+                            <hr />
+                            <p class="textFont">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
+                        </div>
                     </div>
-
-                    <div class="col-sm col-xs-12">
-                        @for (int i = 0; i < Model.Posts.Count; i++)
-                        {
-                            @if (i % 3 == 1)
-                            {
-                                <div class="card" style="margin-top:10px;">
-                                    <img class="card-img-top" src="data:image/png;base64,@Model.Posts[i].ThumbnailBase64" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">@Model.Posts[i].GeorgianTitle</h5>
-                                        <p class="card-text">@Model.Posts[i].GeorgianDescription</p>
-                                    </div>
-                                    <div class="card-footer">
-                                        <a href="@Model.Posts[i].RedirectUrl">ვრცლად ნახვა</a>
-                                    </div>
-                                </div>
-                            }
-                        }
-
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-3">
+                        <img class="card-img-top" src="https://static.euronews.com/articles/stories/06/43/76/76/1440x810_cmsv2_8b9c9503-4d71-5a47-b199-fd6e1185ff06-6437676.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <hr />
+                            <p class="textFont">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
                     </div>
-
-                    <div class="col-sm col-xs-12">
-                        @for (int i = 0; i < Model.Posts.Count; i++)
-                        {
-
-                            @if (i % 3 == 2)
-                            {
-                                <div class="card" style="margin-top:10px;">
-                                    <img class="card-img-top"src="data:image/png;base64,@Model.Posts[i].ThumbnailBase64" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">@Model.Posts[i].GeorgianTitle</h5>
-                                        <p class="card-text">@Model.Posts[i].GeorgianDescription</p>
-                                    </div>
-                                    <div class="card-footer">
-                                        <a href="@Model.Posts[i].RedirectUrl">ვრცლად ნახვა</a>
-                                    </div>
-                                </div>
-                            }
-                        }
-
+                    <div class="card mb-3">
+                        <img class="card-img-top" src="https://static.euronews.com/articles/stories/06/43/76/76/1440x810_cmsv2_8b9c9503-4d71-5a47-b199-fd6e1185ff06-6437676.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <hr />
+                            <p class="textFont">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
                     </div>
-
-
-                    @*<div class="col-sm col-xs-12">
-                        <div class="card" style="margin-top:10px;">
-                        <img class="card-img-top" src="https://media.istockphoto.com/photos/ukraine-flag-ukrainian-flag-on-black-storm-cloud-sky-stormy-weather-picture-id876656164?k=20&m=876656164&s=612x612&w=0&h=5WrGkOe-OW7G2lE56CfBBBlOAIYG02eFtVro_lkMHDA=" alt="Card image cap">
-                        <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                        </div>
-
-
-                        <div class="card"  style="margin-top:10px;">
-                        <img class="card-img-top" src="https://media.istockphoto.com/photos/ukraine-flag-ukrainian-flag-on-black-storm-cloud-sky-stormy-weather-picture-id876656164?k=20&m=876656164&s=612x612&w=0&h=5WrGkOe-OW7G2lE56CfBBBlOAIYG02eFtVro_lkMHDA=" alt="Card image cap">
-                        <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                        </div>
-
-
-                        </div>
-                        <div class="col-sm col-xs-12">
-                        <div class="card" style="margin-top:10px;">
-                        <img class="card-img-top" src="https://media.istockphoto.com/photos/ukraine-flag-ukrainian-flag-on-black-storm-cloud-sky-stormy-weather-picture-id876656164?k=20&m=876656164&s=612x612&w=0&h=5WrGkOe-OW7G2lE56CfBBBlOAIYG02eFtVro_lkMHDA=" alt="Card image cap">
-                        <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                        </div>
-
-
-                        <div class="card"  style="margin-top:10px;">
-                        <img class="card-img-top" src="https://media.istockphoto.com/photos/ukraine-flag-ukrainian-flag-on-black-storm-cloud-sky-stormy-weather-picture-id876656164?k=20&m=876656164&s=612x612&w=0&h=5WrGkOe-OW7G2lE56CfBBBlOAIYG02eFtVro_lkMHDA=" alt="Card image cap">
-                        <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                        </div>
-
-                        </div>
-                        <div class="col-sm col-xs-12">
-                        <div class="card" style="margin-top:10px;">
-                        <img class="card-img-top" src="https://media.istockphoto.com/photos/ukraine-flag-ukrainian-flag-on-black-storm-cloud-sky-stormy-weather-picture-id876656164?k=20&m=876656164&s=612x612&w=0&h=5WrGkOe-OW7G2lE56CfBBBlOAIYG02eFtVro_lkMHDA=" alt="Card image cap">
-                        <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                        </div>
-
-
-                        <div class="card"  style="margin-top:10px;">
-                        <img class="card-img-top" src="https://media.istockphoto.com/photos/ukraine-flag-ukrainian-flag-on-black-storm-cloud-sky-stormy-weather-picture-id876656164?k=20&m=876656164&s=612x612&w=0&h=5WrGkOe-OW7G2lE56CfBBBlOAIYG02eFtVro_lkMHDA=" alt="Card image cap">
-                        <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                        </div>
-
-                        </div>
-                        <div class="col-sm col-xs-12">
-                        <div class="card" style="margin-top:10px;">
-                        <img class="card-img-top" src="https://media.istockphoto.com/photos/ukraine-flag-ukrainian-flag-on-black-storm-cloud-sky-stormy-weather-picture-id876656164?k=20&m=876656164&s=612x612&w=0&h=5WrGkOe-OW7G2lE56CfBBBlOAIYG02eFtVro_lkMHDA=" alt="Card image cap">
-                        <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                        </div>
-
-
-                        <div class="card"  style="margin-top:10px;">
-                        <img class="card-img-top" src="https://media.istockphoto.com/photos/ukraine-flag-ukrainian-flag-on-black-storm-cloud-sky-stormy-weather-picture-id876656164?k=20&m=876656164&s=612x612&w=0&h=5WrGkOe-OW7G2lE56CfBBBlOAIYG02eFtVro_lkMHDA=" alt="Card image cap">
-                        <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                        </div>
-                        </div>*@
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-<section class="testimonials text-center bg-light">
-    <div class="container">
-        <h2 class="mb-5">General Information</h2>
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                    <h5>Info 1</h5>
-                    <p class="font-weight-light mb-0">"Info goes here"</p>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                    <h5>Info 2</h5>
-                    <p class="font-weight-light mb-0">"Info goes here"</p>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                    <h5>Info 3</h5>
-                    <p class="font-weight-light mb-0">"Info goes here"</p>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                    <h5>Info 4</h5>
-                    <p class="font-weight-light mb-0">"Info goes here"</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Footer-->
-<footer class="footer bg-light">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-lg-7 h-100 text-center text-lg-end my-auto">
-                <ul class="list-inline mb-0">
-                    <li class="list-inline-item">
-                        <a href="#!"><i class="bi-facebook fs-3"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#!"><i class="bi-telegram fs-3"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#!"><i class="bi-instagram fs-3"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#!"><i class="bi-envelope fs-3"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <!-- * *                               SB Forms JS                               * *-->
-    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-</footer>
