--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -36,37 +36,37 @@
             </svg>
 
         </div>
-        <div class=row style="height:50px; background: #E9E9E9">
-
-            <div class="d-flex flex-row-reverse">
-                <p style="font-family: Roboto;
+        <div class="row" style="height:50px; background: #E9E9E9">
+            <div class="d-flex justify-content-end">
+                <p id="topInfoP" style="font-family: Roboto;
                         font-size: 13px;
                         font-style: normal;
                         font-weight: 700;
                         line-height: 25px;
                         letter-spacing: 0em;
                         text-align: left;
-                        margin-right:50px;
                         margin-top:10px;
+                        margin-left:0px;
                         ">+995 577 123 456  |  info@dopomoga.ge</p>
             </div>
         </div>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light" style="background: #017FCD">
 
             <div class="col-md-3"></div>
+
             <div class="col-md-9">
-                <div class="container">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="navbar-collapse collapse justify-content-between">
-                            <ul class="navbar-nav ">
-                                @*ms-auto*@
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-                                        <p style="font-family: Roboto;
+                <div class="row">
+                    <div class="container">
+                        <div class="container-fluid">
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" id="toggle_button"
+                                    aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="navbar-collapse collapse justify-content-between">
+                                <ul class="navbar-nav ">
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                                            <p id="mainPageP" style="font-family: Roboto;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
@@ -74,11 +74,11 @@
                                                                         letter-spacing: 0.1em;
                                                                         text-align: left;
                                                                         color:white;">მთავარი</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">
-                                        <p style="font-family: Roboto;
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs">
+                                            <p style="font-family: Roboto;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
@@ -87,11 +87,11 @@
                                                                         text-align: left;
                                                                         color:#62B9EF;
                                                                         margin-left:40px">ჩვენს შესახებ</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-                                        <p style="font-family: Roboto;
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacts">
+                                            <p style="font-family: Roboto;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
@@ -100,11 +100,11 @@
                                                                         text-align: left;
                                                                         color: #62B9EF;
                                                                         margin-left:40px">კონტაქტები</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-                                        <p style="font-family: Roboto;
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FAQ">
+                                            <p style="font-family: Roboto;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
@@ -113,48 +113,77 @@
                                                                         text-align: left;
                                                                         color: #62B9EF;
                                                                         margin-left:40px">FAQ</p>
-                                    </a>
-                                </li>
-                            </ul>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="navbar-nav ms-auto">
+                                    <li>
+                                        <p style="font-family: Roboto;
+                                            font-size: 20px;
+                                            font-style: normal;
+                                            font-weight: 500;
+                                            line-height: 23px;
+                                            letter-spacing: 0.1em;
+                                            text-align: left;
+                                            color:white;
+                                            margin-right:3px;
+                                            ">UA</p>
+                                    </li>
+                                    <li>
+                                        <div style="width:25px; height:25px; margin-right:5px;">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none" viewBox="0 0 26 26">
+                                                <path fill="#fff" stroke="#fff" stroke-width="2" d="M1 12.683C1 6.23 6.23 1 12.683 1h.634C19.77 1 25 6.23 25 12.683c0 6.452-5.23 11.683-11.683 11.683h-.634C6.23 24.366 1 19.136 1 12.683z" />
+                                                <path fill="#F22222" d="M25.574 11.508H.426v2.984h25.148v-2.984z" />
+                                                <path fill="#F22222" d="M11.508 0v25.148h2.984V0h-2.984zM9.924 17.378l-1.056.151.15-1.056h-1.96l.15 1.056-1.055-.15v1.96l1.056-.15-.151 1.055h1.96l-.15-1.055 1.056.15v-1.96zM19.847 17.378l-1.056.151.151-1.056h-1.96l.15 1.056-1.056-.15v1.96l1.056-.15-.15 1.055h1.96l-.15-1.055 1.055.15v-1.96z" />
+                                                <g>
+                                                    <path fill="#F22222" d="M9.924 6.66l-1.056.151.15-1.055h-1.96l.15 1.055-1.055-.15v1.96l1.056-.15-.151 1.056h1.96l-.15-1.056 1.056.15v-1.96zM19.847 6.66l-1.056.151.151-1.055h-1.96l.15 1.055-1.056-.15v1.96l1.056-.15-.15 1.056h1.96l-.15-1.056 1.055.15v-1.96z" />
+                                                </g>
+                                                <g>
+                                                    <mask id="a" width="26" height="26" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha">
+                                                        <path fill="#fff" d="M0 12.683C0 5.678 5.678 0 12.683 0h.634C20.322 0 26 5.678 26 12.683s-5.678 12.683-12.683 12.683h-.634C5.678 25.366 0 19.688 0 12.683z" />
+                                                        <path stroke="#CDCDCD" d="M0 12.683C0 5.678 5.678 0 12.683 0h.634C20.322 0 26 5.678 26 12.683s-5.678 12.683-12.683 12.683h-.634C5.678 25.366 0 19.688 0 12.683z" />
+                                                    </mask>
+                                                    <g mask="url(#a)">
+                                                        <path stroke="#CDCDCD" stroke-width="2" d="M17.488 12.683C17.488 6.23 22.718 1 29.17 1h.634c6.452 0 11.683 5.23 11.683 11.683 0 6.452-5.23 11.683-11.683 11.683h-.634c-6.453 0-11.683-5.23-11.683-11.683z" />
+                                                        <path fill="#017FCD" d="M-1.268-1.902h28.537v14.585H-1.268z" />
+                                                        <path fill="#F8BF0C" d="M-1.268 12.683h28.537v14.585H-1.268z" />
+                                                    </g>
+                                                </g>
+                                                <path stroke="#fff" d="M.5 12.683C.5 5.954 5.954.5 12.683.5h.634C20.046.5 25.5 5.954 25.5 12.683c0 6.728-5.454 12.183-12.183 12.183h-.634C5.954 24.866.5 19.41.5 12.683z" />
+                                            </svg>
+
+                                        </div>
+
+                                    </li>
+                                    <li>
+                                        <div style="width:25px; height:25px; margin-right:10px;">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none" viewBox="0 0 26 26">
+                                                <path fill="#F22222" d="M25.574 11.508H.426v2.984h25.148v-2.984z" />
+                                                <path fill="#F22222" d="M11.508 0v25.148h2.984V0h-2.984zM9.924 17.378l-1.056.151.15-1.056h-1.96l.15 1.056-1.055-.15v1.96l1.056-.15-.151 1.055h1.96l-.15-1.055 1.056.15v-1.96zM19.847 17.378l-1.056.151.151-1.056h-1.96l.15 1.056-1.056-.15v1.96l1.056-.15-.15 1.055h1.96l-.15-1.055 1.055.15v-1.96z" />
+                                                <g>
+                                                    <path fill="#F22222" d="M9.924 6.66l-1.056.151.15-1.055h-1.96l.15 1.055-1.055-.15v1.96l1.056-.15-.151 1.056h1.96l-.15-1.056 1.056.15v-1.96zM19.847 6.66l-1.056.151.151-1.055h-1.96l.15 1.055-1.056-.15v1.96l1.056-.15-.15 1.056h1.96l-.15-1.056 1.055.15v-1.96z" />
+                                                </g>
+                                                <path stroke="#fff" d="M.5 12.683C.5 5.954 5.954.5 12.683.5h.634C20.046.5 25.5 5.954 25.5 12.683c0 6.728-5.454 12.183-12.183 12.183h-.634C5.954 24.866.5 19.41.5 12.683z" />
+                                                <g>
+                                                    <path fill="#fff" stroke="#fff" stroke-width="2" d="M1 12.683C1 6.23 6.23 1 12.683 1h.634C19.77 1 25 6.23 25 12.683c0 6.452-5.23 11.683-11.683 11.683h-.634C6.23 24.366 1 19.136 1 12.683z" />
+                                                    <path fill="#F22222" d="M25.574 11.508H.426v2.984h25.148v-2.984z" />
+                                                    <path fill="#F22222" d="M11.508 0v25.148h2.984V0h-2.984zM9.924 17.378l-1.056.151.15-1.056h-1.96l.15 1.056-1.055-.15v1.96l1.056-.15-.151 1.055h1.96l-.15-1.055 1.056.15v-1.96zM19.847 17.378l-1.056.151.151-1.056h-1.96l.15 1.056-1.056-.15v1.96l1.056-.15-.15 1.055h1.96l-.15-1.055 1.055.15v-1.96z" />
+                                                    <g>
+                                                        <path fill="#F22222" d="M9.924 6.66l-1.056.151.15-1.055h-1.96l.15 1.055-1.055-.15v1.96l1.056-.15-.151 1.056h1.96l-.15-1.056 1.056.15v-1.96zM19.847 6.66l-1.056.151.151-1.055h-1.96l.15 1.055-1.056-.15v1.96l1.056-.15-.15 1.056h1.96l-.15-1.056 1.055.15v-1.96z" />
+                                                    </g>
+                                                    <path stroke="#fff" d="M.5 12.683C.5 5.954 5.954.5 12.683.5h.634C20.046.5 25.5 5.954 25.5 12.683c0 6.728-5.454 12.183-12.183 12.183h-.634C5.954 24.866.5 19.41.5 12.683z" />
+                                                </g>
+                                            </svg>
+
+                                        </div>
+
+                                    </li>
+                                    <li>
+                                        <input style="border-radius: 30px;" />
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                        @*<div class="navbar-collapse collapse d-sm-inline-flex">
-                            <div class="d-flex flex-row-reverse bd-highlight">
-                            <div class="p-2 bd-highlight">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">მთავარი</a>
-                            </div>
-                            <div class="p-2 bd-highlight">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">ჩვენს შესახებ</a>
-                            </div>
-                            <div class="p-2 bd-highlight">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">ჩვენს შესახებ</a>
-                            </div>
-                            <div class="p-2 bd-highlight">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">ჩვენს შესახებ</a>
-                            </div>
-                            </div>
-                            @*<ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">მთავარი</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">ჩვენს შესახებ</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">საჭირო კონტაქტები</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Test">FAQ</a>
-                            </li>
-                            <li class="nav-link">
-                            <partial name="_Culture" />
-                            </li>
-                            </ul>
-                            <div class="col-xs-4">
-                            <div class="row">
-                            <input type="text" placeholder="საძიებო სიტყვა" class="form-control">
-                            </div>
-                            </div>
-                            </div>*@
                     </div>
                 </div>
             </div>
