proper page name coloring

--- a/test/Views/Home/AboutUs.cshtml
+++ b/test/Views/Home/AboutUs.cshtml
@@ -25,3 +25,16 @@
         </div>
     </div>
 </div>
+
+
+<script>
+    window.onload = function() {
+
+        $("#faqP").css("color", "#62B9EF");
+        $("#mainPageP").css("color", "#62B9EF");
+        $("#contactsP").css("color", "#62B9EF");
+        $("#aboutUsP").css("color", "white");
+
+    };
+
+</script>
