--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs">
-                                            <p style="font-family: Roboto;
+                                            <p id="aboutUsP" style="font-family: Roboto;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
@@ -91,7 +91,7 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacts">
-                                            <p style="font-family: Roboto;
+                                            <p id="contactsP" style="font-family: Roboto;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
@@ -104,7 +104,7 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FAQ">
-                                            <p style="font-family: Roboto;
+                                            <p id="faqP" style="font-family: Roboto;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
