--- a/test/Views/Identity/Login.cshtml
+++ b/test/Views/Identity/Login.cshtml
@@ -57,7 +57,7 @@
 <script>
      
      window.onload = function() {
-      $("#xederblyat").attr("hidden", "hidden");
+      $("#mainHeader").attr("hidden", "hidden");
     };
     
     
