--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -16,13 +16,13 @@
     <link href="css/styles.css" rel="stylesheet" asp-append-version="true" />
 </head>
 <body style="height: 100%">
-    <header id="xederblyat">
-        <div style="position: absolute;
-                        width: 211px;
-                        height: 79.98px;
-                        left: 67px;
-                        top: 18.28px;
-                        z-index:99">
+    <header id="mainHeader">
+        <div id="mainLogoDiv" style="position: absolute;
+                                    width: 211px;
+                                    height: 79.98px;
+                                    left: 67px;
+                                    top: 18.28px;
+                                    z-index: 99">
             <svg xmlns="http://www.w3.org/2000/svg" width="211" height="81" fill="none" viewBox="0 0 211 81">
                 <path fill="#F8BF0C" d="M211 63.256C140.015 34.318 70.988 101.814 0 72.878c14.066-23.951 28.134-47.9 42.2-71.849 41.349 19.96 85.251-14.189 126.6 5.774 14.066 18.816 28.134 37.633 42.2 56.453z" />
                 <path fill="#017FCD" d="M187.064 31.234c-54.162-23.855-108.966 24.744-163.125.89 6.087-10.365 12.174-20.731 18.264-31.095C83.549 20.989 127.45-13.16 168.8 6.803l18.264 24.431z" />
