--- a/test/wwwroot/css/site.css
+++ b/test/wwwroot/css/site.css
@@ -81,7 +81,6 @@ html, body {
     object-fit: fill;
 }
 
-
 @media only screen and (max-width: 600px) {
     #toggle_button {
         margin-left: 150px;
@@ -92,4 +91,9 @@ html, body {
     #topInfoP {
         margin-right: 0px;
     }
+    #mainLogoDiv {
+        left: 7px;
+    }
+
+    
 }
