--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -285,7 +285,13 @@
                         line-height: 16px;
                         margin-top: 20px;
 
-                        color: #929292;">© 2022 Dopomoga Ukraini <i class="bi bi-telegram fa-lg" style="margin-left:20px;"></i></p>
+                        color: #929292;">© 2022 Dopomoga Ukraini
+                       
+                       <i class="bi bi-telegram fa-lg" style="margin-left:20px;"></i>
+                       <i class="bi bi-facebook fa-lg" style="margin-left:20px;"></i>
+                       <i class="bi bi-instagram fa-lg" style="margin-left:20px;"></i>
+                   
+                   </p>
 
                        @*<div style="width:20px; height:20px;">
                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
