--- a/test/wwwroot/css/site.css
+++ b/test/wwwroot/css/site.css
@@ -23,9 +23,11 @@ html, body {
         height: 60px;
     }
 
-.footer {
-    background: yellow;
+
+.activeCategory {
+    background-color: #E6AE00;
 }
+
 
 .textFont {
     font-family: Roboto;
