--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -92,7 +92,9 @@
                                                                         line-height: 23px;
                                                                         letter-spacing: 0.1em;
                                                                         text-align: left;
-                                                                        color:white;">@localizer["hehe"]</p>
+                                                                        color:white;">
+                                                                    მთავარი
+                                                                    </p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
